--- a/index.html
+++ b/index.html
@@ -12,25 +12,15 @@
   <meta name="HandheldFriendly" content="True" />
   <meta name="robots" content="noindex,nofollow" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.9/flatpickr.min.css">
-  <script src="https://telegram.org/js/telegram-web-app.js?1"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.9/flatpickr.min.js"></script>
+  <script src="https://telegram.org/js/telegram-web-app.js?1"></script>
   <link rel="stylesheet" href="./style.css">
-  <script>
-    function setThemeClass() {
-      document.documentElement.className = Telegram.WebApp.colorScheme;
-    }
-    Telegram.WebApp.onEvent('themeChanged', setThemeClass);
-    setThemeClass();
-  </script>
+  <script src="scripts/setThemeClass.js"></script>
 </head>
 
 <body>
-
-  <h1>Integración de Telegram y calendario en el sitio web</h1>
-  <input type="text" placeholder="Selecciona una fecha">
-  <button onclick="enviarMensaje()">Enviar fecha a Telegram</button>
-
-  <script src="scripts/script.js"></script>
+  <h1>Hello World</h1>
+  <!-- <script src="scripts/script.js"></script> -->
 </body>
 
 </html>
