--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
   <meta name="MobileOptimized" content="176" />
   <meta name="HandheldFriendly" content="True" />
   <meta name="robots" content="noindex,nofollow" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.9/flatpickr.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.9/flatpickr.min.js"></script>
   <script src="https://telegram.org/js/telegram-web-app.js?1"></script>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <script src="scripts/setThemeClass.js"></script>
 </head>
 
 <body>
   <h1>Hello World</h1>
-  <!-- <script src="scripts/script.js"></script> -->
 </body>
 
 </html>
