--- a/seleccionar-month-year.html
+++ b/seleccionar-month-year.html
@@ -11,9 +11,8 @@
   <meta name="MobileOptimized" content="176" />
   <meta name="HandheldFriendly" content="True" />
   <meta name="robots" content="noindex,nofollow" />
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.9/flatpickr.min.css"> -->
-  <link rel="stylesheet" href="./seleccionar-fecha.css">
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.9/flatpickr.min.js"></script> -->
+  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/seleccionar-fecha.css">
   <script src="https://telegram.org/js/telegram-web-app.js?1"></script>
   <script src="scripts/setThemeClass.js"></script>
 </head>
