--- a/seleccionar-month-year.html
+++ b/seleccionar-month-year.html
@@ -18,32 +18,23 @@
 </head>
 
 <body>
-  <div class="seleccionar-fecha">
-    <label
-      class="seleccionar-fecha__label"
-      for="fecha"
-    >
-      <h3>
-        Seleccione un mes
-      </h3>
-    </label>
-    <input type="number" id="mes" min="1" max="12" class="seleccionar-fecha__input-fecha">
-    <label
-      class="seleccionar-fecha__label"
-      for="fecha"
-    >
-      <h3>
-        Seleccione un mes
-      </h3>
-    </label>
-    <input type="number" id="ano" min="2022" class="seleccionar-fecha__input-fecha">
-    <button
-      class="seleccionar-fecha__enviar-mensaje"
-      onclick="enviarMensaje()"
-    >
-      Enviar fecha a Telegram
-    </button>
-  </div>
+  <!-- <div class="seleccionar-fecha"> -->
+  <label for="fecha">
+    <h3>
+      Seleccione un mes
+    </h3>
+  </label>
+  <input type="number" id="mes" min="1" max="12">
+  <label class="seleccionar-fecha__label" for="fecha">
+    <h3>
+      Seleccione un mes
+    </h3>
+  </label>
+  <input type="number" id="ano" min="2022">
+  <button class="send-data" onclick="enviarMensaje()">
+    Enviar fecha a Telegram
+  </button>
+  <!-- </div> -->
 
   <script src="scripts/enviarMensajeYearMonth.js"></script>
   <script>
@@ -51,7 +42,7 @@
     var mesActual = fechaActual.getMonth() + 1;
 
     var anoActual = fechaActual.getFullYear();
-  
+
     document.getElementById("mes").value = mesActual;
     document.getElementById("ano").value = anoActual;
   </script>
