--- a/select-month-year.html
+++ b/select-month-year.html
@@ -18,32 +18,44 @@
 </head>
 
 <body>
-  <!-- <div class="seleccionar-fecha"> -->
-  <label for="fecha">
+  <label for="month">
     <h3>
       Seleccione un mes
     </h3>
   </label>
-  <input type="number" id="mes" min="1" max="12">
+  <select name="month" id="month">
+    <option value="1">Enero</option>
+    <option value="2">Febrero</option>
+    <option value="3">Marzo</option>
+    <option value="4">Abril</option>
+    <option value="5">Mayo</option>
+    <option value="6">Junio</option>
+    <option value="7">Julio</option>
+    <option value="8">Agosto</option>
+    <option value="9">Septiembre</option>
+    <option value="10">Octubre</option>
+    <option value="11">Noviembre</option>
+    <option value="12">Diciembre</option>
+  </select>
+
   <label class="seleccionar-fecha__label" for="fecha">
     <h3>
       Seleccione un mes
     </h3>
   </label>
   <input type="number" id="year" min="2022">
-  <button class="send-data" onclick="enviarMensaje()">
-    Enviar fecha a Telegram
+  <button class="send-data" onclick="sendMonthYear()">
+    Enviar selección a Telegram
   </button>
-  <!-- </div> -->
 
-  <script src="scripts/enviarMensajeYearMonth.js"></script>
+  <script src="scripts/sendMonthYear.js"></script>
   <script>
     var fechaActual = new Date();
     var mesActual = fechaActual.getMonth() + 1;
 
     var yearActual = fechaActual.getFullYear();
 
-    document.getElementById("mes").value = mesActual;
+    document.getElementById("month").value = mesActual;
     document.getElementById("year").value = yearActual;
   </script>
 </body>
