--- a/select-quarter-year.html
+++ b/select-quarter-year.html
@@ -18,32 +18,48 @@
 </head>
 
 <body>
-  <!-- <div class="seleccionar-fecha"> -->
-  <label for="fecha">
+  <label for="quarter">
     <h3>
       Seleccione un mes
     </h3>
   </label>
-  <input type="number" id="mes" min="1" max="12">
+  <select name="quarter" id="quarter">
+    <option value="1">Enero - Marzo</option>
+    <option value="2">Abril - Junio</option>
+    <option value="3">Julio - Septiembre</option>
+    <option value="4">Octubre - Diciembre</option>
+  </select>
+
   <label class="seleccionar-fecha__label" for="fecha">
     <h3>
       Seleccione un mes
     </h3>
   </label>
   <input type="number" id="year" min="2022">
-  <button class="send-data" onclick="enviarMensaje()">
-    Enviar fecha a Telegram
+  <button class="send-data" onclick="sendQuarterYear()">
+    Enviar selección a Telegram
   </button>
-  <!-- </div> -->
 
-  <script src="scripts/enviarMensajeYearMonth.js"></script>
+  <script src="scripts/sendQuarterYear.js"></script>
   <script>
     var fechaActual = new Date();
-    var mesActual = fechaActual.getMonth() + 1;
-
+    var monthActual = fechaActual.getMonth() + 1; // Sumamos 1 ya que los meses en JavaScript son de 0 a 11
     var yearActual = fechaActual.getFullYear();
 
-    document.getElementById("mes").value = mesActual;
+    // Determinar el trimestre actual
+    var selectedQuarter;
+    if (monthActual >= 1 && monthActual <= 3) {
+      selectedQuarter = 1;
+    } else if (monthActual >= 4 && monthActual <= 6) {
+      selectedQuarter = 2;
+    } else if (monthActual >= 7 && monthActual <= 9) {
+      selectedQuarter = 3;
+    } else {
+      selectedQuarter = 4;
+    }
+
+    // Seleccionar automáticamente el trimestre y año actual en los elementos HTML
+    document.getElementById("quarter").value = selectedQuarter;
     document.getElementById("year").value = yearActual;
   </script>
 </body>
